--- a/Accessories/Views/Objects/Index.cshtml
+++ b/Accessories/Views/Objects/Index.cshtml
@@ -1,1 +1,135 @@
-﻿
+﻿@{
+    //Layout = null;//для представления не используется мастер-страница
+}
+<script>
+    function sortTable(n) {
+        var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+        table = document.getElementById("myTable2");
+        switching = true;
+        // Set the sorting direction to ascending:
+        dir = "asc";
+        /* Make a loop that will continue until
+        no switching has been done: */
+        while (switching) {
+            // Start by saying: no switching is done:
+            switching = false;
+            rows = table.getElementsByTagName("TR");
+            /* Loop through all table rows (except the
+            first, which contains table headers): */
+            for (i = 1; i < (rows.length - 1); i++) {
+                // Start by saying there should be no switching:
+                shouldSwitch = false;
+                /* Get the two elements you want to compare,
+                one from current row and one from the next: */
+                x = rows[i].getElementsByTagName("TD")[n];
+                y = rows[i + 1].getElementsByTagName("TD")[n];
+                /* Check if the two rows should switch place,
+                based on the direction, asc or desc: */
+                if (dir == "asc") {
+                    if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+                        // If so, mark as a switch and break the loop:
+                        shouldSwitch = true;
+                        break;
+                    }
+                } else if (dir == "desc") {
+                    if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+                        // If so, mark as a switch and break the loop:
+                        shouldSwitch = true;
+                        break;
+                    }
+                }
+            }
+            if (shouldSwitch) {
+                /* If a switch has been marked, make the switch
+                and mark that a switch has been done: */
+                rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+                switching = true;
+                // Each time a switch is done, increase this count by 1:
+                switchcount++;
+            } else {
+                /* If no switching has been done AND the direction is "asc",
+                set the direction to "desc" and run the while loop again. */
+                if (switchcount == 0 && dir == "asc") {
+                    dir = "desc";
+                    switching = true;
+                }
+            }
+        }
+    }
+</script>
+@{
+    ViewBag.Title = "Товары";
+}
+<!DOCTYPE html>
+<html>
+<head>
+
+    <style>
+
+        a {
+            text-decoration: none; /* Отменяем подчеркивание у ссылки */
+        }
+
+        .link a {
+            position: absolute;
+            width: 100%;
+            height: 1.5em;
+            display: block;
+        }
+
+        .context-menu {
+            display: none;
+            position: absolute;
+            z-index: 10;
+        }
+
+        .context-menu--active {
+            display: block;
+        }
+    </style>
+</head>
+<body>
+
+    <h3>Товары</h3>
+
+    <br />
+
+
+    <table id="myTable2" border="1" style="">
+        <thead>
+            <tr>
+
+                <td onclick="sortTable(0)">Наименование</td>
+                <td onclick="sortTable(1)">Категория</td>
+                <td onclick="sortTable(2)">Цена</td>
+                <td onclick="sortTable(3)">Описание</td>
+                <td onclick="sortTable(4)">Характеристики</td>
+
+
+            </tr>
+        </thead>
+        <tbody>
+
+
+             @foreach (var list in ViewBag.listObjects)
+            {
+            <tr style=" height: 85px; text-decoration: none; ">
+
+            <td>@list.Name</td>
+            <td>@list.Category</td>
+
+            <td>@list.Price</td>
+            <td>@list.About</td>
+            <td>@list.Attributes</td>
+
+            </tr>
+
+            } 
+
+
+        </tbody>
+    </table>
+    <br />
+    <button type="submit" value="" onclick="location.href='/Home/Routes'">Назад</button>
+</body>
+</html>
