--- a/Accessories/Views/Objects/AddObject.cshtml
+++ b/Accessories/Views/Objects/AddObject.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Добавить товар";
+    ViewBag.Title = "Заполните поля";
 }
 <form method="post" action="/objects/complete"> 
     @{
